Added additional commented RedirectMatch rule to .htaccess file that would redirect to USERNAME subdirectory.

--- a/.htaccess
+++ b/.htaccess
@@ -13,6 +13,7 @@ AuthUserFile /usr/www/users/jotzae/robosumo.eu.202425/jotz/.htpasswd
 # Set default file to open in each directory
 DirectoryIndex index.php
 
+#RedirectMatch ^/$ /USERNAME/
 RedirectMatch ^/$ /cookbook/
 
 # Set file upload size limit
